=======================


0.50.3 (unreleased)
-------------------

- Introduced fall-back behaviour to the full-graphical block so that the
  teaser image and title, resp., of the referenced object are used when the
  block doesn't have its own image or title. Added the selection of a layout
  to choose an image from an image group (#10158).

- Adds fields for OG-metadata in CP-metadata-form


0.50.2 (2011-12-19)
-------------------

- Use low-priority queue for publishing RSS feeds (#10037).
- Use BeforeCheckin(while_publishing) instead of BeforePublish+cycle for
  update_feed_items to avoid the extra checkin/checkout-cycle (for #10068).


0.50.1 (2011-11-15)
-------------------

- Removed 4th topiclink


0.50.0 (2011-11-13)
-------------------

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)

- In den Metadaten für den Centerpage-Editor sind nun Felder für 4 sog. Topic-
  links (jeweils Linktext un URL) sowie ein Title-Feld (ohne Ticket)


0.43.3 (2011-06-23)
-------------------

- Compatibility fix for Firefox 5 (#9236).


0.43.2 (2011-06-22)
-------------------

- Compatibility fix for Firefox 5 (#9227).


0.43.1 (2011-03-24)
-------------------

- Bugfix: Raw-Modul im Aufmacher bekommt kein Layout mehr zugewiesen, das kann
  nämlich nicht funktionieren (#8844).

- is_published für Validation-Rules ignoriert NotPublishablePublishInfos
  (#8843).


0.43.0 (2011-03-23)
-------------------

- TeaserBockProxy adapts to ICommonMetadata now.

- Freie Teaser werden jetzt nur noch in der CP gespeichert. Es gibt keine extra
  Objekte im DAV mehr dafür (#7826)

- Das Raw-Modul kann jetzt auch im Aufmacher verwendet werden (#8781)

- Layout-Berechnung im Aufmacher korrigiert (#8844).


0.42.0 (2010-08-16)
-------------------

- Reichweite im CPE anzeigen (#7560).

- Für Teaserbilder wird als Fallback jetzt @@preview  verwendet (#7798).


0.41.0 (2010-08-09)
-------------------
